<resources>
    <string name="app_name">Study Buddy</string>
<!--    Strings related to activities-->
    <string name="title_activity_main">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_assessments">Course Info</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_set_time">Set Time</string>
    <string name="title_activity_search">Search</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--    new strings-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag_login">Welcome Back! Please Login</string>
    <string name="tag_resister">Welcome! Please Register</string>
    <string name="regester_prompt">No Account? Please Register</string>
    <string name="return_to_login">Return to Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="arrow">arrow</string>
    <string name="please_set_time">Please set time</string>
    <string name="set_time">set time</string>
    <string name="start_chronometer">Start Chronometer</string>
    <string name="please_select_course">Please select course</string>

    <string name="channel_name">Study Notification</string>
    <string name="channel_description">Notifications related to study.</string>
</resources>