<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:translationY="430dp"
        app:srcCompat="@drawable/login_image" />

    <Button
        android:id="@+id/btn_login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_subtitle2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="320dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:translationY="-120dp" />

    <TextView
        android:id="@+id/tv_subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="-312dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/regester_prompt"
        android:textSize="17sp"
        android:translationY="-120dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:translationY="-120dp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_username"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag_login"
        android:textSize="17sp"
        android:translationY="-120dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/e_mail"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        android:translationY="-120dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/password"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        android:translationY="-120dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:translationY="-120dp" />

</RelativeLayout>